# FileCompressionTool

./: .gitignore  CMakeLists.txt  README.md
header_files/: compress.h  constants.h  decompress.h  utils.h
src/: compress.c  constants.c  decompress.c  main.c  utils.c
test_files/: test_1.rle
